[gd_scene load_steps=5 format=3 uid="uid://djsn3mlwrgaha"]

[ext_resource type="Script" path="res://policia.gd" id="1_4a610"]
[ext_resource type="Texture2D" uid="uid://djc5mf2t87gu4" path="res://Sprites/policia.png" id="2_5wf2s"]
[ext_resource type="Script" path="res://Scenes/raycast_line_of_sight.gd" id="3_u83v7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w5841"]
radius = 30.55
height = 161.8

[node name="policia" type="CharacterBody2D"]
scale = Vector2(1.335, 1.335)
collision_layer = 16
collision_mask = 62
script = ExtResource("1_4a610")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.09, 0.09)
texture = ExtResource("2_5wf2s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-6.285, -14.105)
shape = SubResource("CapsuleShape2D_w5841")

[node name="raycast_lineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, -35.975)
target_position = Vector2(-180, 0)
collision_mask = 52
script = ExtResource("3_u83v7")

[node name="bullet_timer" type="Timer" parent="."]
one_shot = true

[connection signal="target_detected" from="raycast_lineOfSight" to="." method="_on_raycast_line_of_sight_target_detected"]
